Test Org - Speridian/src/objects/BA_Compliance_Programs__c.object
<CustomObject>
    <fields>
        <fullName>ba_EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_IsCompliant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_ProgramName__c</fullName>
        <label>Program Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Compliance Programs</label>
    <nameField>
        <displayFormat>CPID-{0000}</displayFormat>
        <label>Compliance Programs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>